--- a/neo4j-spring-example-common/pom.xml
+++ b/neo4j-spring-example-common/pom.xml
@@ -62,6 +62,12 @@
 			<artifactId>spring-webmvc</artifactId>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
 
 		<!-- Database and Spring data Dependencies -->
 		<dependency>
@@ -93,7 +99,7 @@
 		<!-- Neo4j -->
 		<dependency>
 			<groupId>org.neo4j</groupId>
-			<artifactId>neo4j</artifactId>
+			<artifactId>neo4j-kernel</artifactId>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
