--- a/neo4j-spring-example-pojos/pom.xml
+++ b/neo4j-spring-example-pojos/pom.xml
@@ -8,11 +8,47 @@
 	</parent>
 	<artifactId>neo4j-spring-example-pojos</artifactId>
 
+	<developers>
+		<developer>
+			<email>harmeetsingh.0013@gmail.com</email>
+			<name>Harmeet Singh(Taara)</name>
+			<roles>
+				<role>JavaEE Developer</role>
+			</roles>
+			<url>harmeetsingh13.blogspot.in</url>
+		</developer>
+	</developers>
+
 	<dependencies>
 		<!-- Miscellaneous -->
 		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
 		</dependency>
+
+		<!-- Spring Transaction and Spring Data -->
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-neo4j</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
+		<!-- Neo4j -->
+		<dependency>
+			<groupId>org.neo4j</groupId>
+			<artifactId>neo4j-kernel</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
