--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 		<mvn-jar>2.5</mvn-jar>
 		<mvn-war>2.5</mvn-war>
 		<mvn-javadoc>2.10.1</mvn-javadoc>
+		<mvn-aspectj>1.7</mvn-aspectj>
 		<jdk-version>1.8</jdk-version>
 		<javax-servlet>3.1.0</javax-servlet>
 		<thymeleaf.version>2.1.3.RELEASE</thymeleaf.version>
@@ -39,9 +40,13 @@
 		<spring-oauth>2.0.3.RELEASE</spring-oauth>
 		<spring-security>3.2.5.RELEASE</spring-security>
 		<aspectj-rt>1.8.4</aspectj-rt>
+		<aspectj-tools>1.5.4</aspectj-tools>
 		<neo4j-common>2.1.5</neo4j-common>
 		<google-guava>18.0</google-guava>
 		<trove>3.0.3</trove>
+		<project-lambok>1.14.8</project-lambok>
+		<junit>4.11</junit>
+		<javax-validation>1.1.0.Final</javax-validation>
 	</properties>
 
 	<dependencyManagement>
@@ -131,6 +136,11 @@
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-expression</artifactId>
+				<version>${spring-common}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-test</artifactId>
 				<version>${spring-common}</version>
 			</dependency>
 
@@ -356,11 +366,24 @@
 				<groupId>org.neo4j</groupId>
 				<artifactId>neo4j-kernel</artifactId>
 				<version>${neo4j-common}</version>
+				<exclusions>
+					<exclusion></exclusion>
+				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>org.neo4j</groupId>
 				<artifactId>neo4j</artifactId>
 				<version>${neo4j-common}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>org.neo4j</groupId>
+						<artifactId>neo4j-kernel</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.neo4j</groupId>
+						<artifactId>neo4j-cypher</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>org.neo4j</groupId>
@@ -402,6 +425,23 @@
 				<artifactId>trove4j</artifactId>
 				<version>${trove}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>${project-lambok}</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>${junit}</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.validation</groupId>
+				<artifactId>validation-api</artifactId>
+				<version>${javax-validation}</version>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
@@ -452,6 +492,26 @@
 					<version>${mvn-javadoc}</version>
 				</plugin>
 
+				<!-- <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>aspectj-maven-plugin</artifactId> 
+					<version>${mvn-aspectj}</version> <configuration> <outxml>true</outxml> <aspectLibraries> 
+					<aspectLibrary> <groupId>org.springframework</groupId> <artifactId>spring-aspects</artifactId> 
+					</aspectLibrary> <aspectLibrary> <groupId>org.springframework.data</groupId> 
+					<artifactId>spring-data-neo4j</artifactId> </aspectLibrary> </aspectLibraries> 
+					<source>${jdk-version}</source> <target>${jdk-version}</target> </configuration> 
+					<executions> <execution> <goals> <goal>compile</goal> use this goal to weave 
+					all your main classes <goal>test-compile</goal> use this goal to weave all 
+					your test classes </goals> </execution> </executions> <dependencies> <dependency> 
+					<groupId>org.aspectj</groupId> <artifactId>aspectjrt</artifactId> <version>${aspectj-rt}</version> 
+					</dependency> <dependency> <groupId>aspectj</groupId> <artifactId>aspectjtools</artifactId> 
+					<version>${aspectj-tools}</version> </dependency> </dependencies> </plugin> -->
+
+				<!-- <plugin> <groupId>org.eclipse.m2e</groupId> <artifactId>lifecycle-mapping</artifactId> 
+					<version>1.0.0</version> <configuration> <lifecycleMappingMetadata> <pluginExecutions> 
+					<pluginExecution> <pluginExecutionFilter> <groupId>org.codehaus.mojo</groupId> 
+					<artifactId>aspectj-maven-plugin</artifactId> <versionRange>[1.7,)</versionRange> 
+					<goals> <goal>test-compile</goal> <goal>compile</goal> </goals> </pluginExecutionFilter> 
+					<action> <execute /> </action> </pluginExecution> </pluginExecutions> </lifecycleMappingMetadata> 
+					</configuration> </plugin> -->
 			</plugins>
 		</pluginManagement>
 	</build>
