--- a/neo4j-spring-example-service/pom.xml
+++ b/neo4j-spring-example-service/pom.xml
@@ -1,9 +1,67 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.harmeetsingh13.neo4jexample</groupId>
-    <artifactId>neo4j-spring-example</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <artifactId>neo4j-spring-example-service</artifactId>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.harmeetsingh13.neo4jexample</groupId>
+		<artifactId>neo4j-spring-example</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<artifactId>neo4j-spring-example-service</artifactId>
+
+	<developers>
+		<developer>
+			<email>harmeetsingh.0013@gmail.com</email>
+			<name>Harmeet Singh(Taara)</name>
+			<roles>
+				<role>JavaEE Developer</role>
+			</roles>
+			<url>harmeetsingh13.blogspot.in</url>
+		</developer>
+	</developers>
+
+	<properties>
+		<custom>0.0.1-SNAPSHOT</custom>
+	</properties>
+
+	<dependencies>
+		<!-- Custom Dependencies -->
+		<dependency>
+			<groupId>com.harmeetsingh13.neo4jexample</groupId>
+			<artifactId>neo4j-spring-example-common</artifactId>
+			<version>${custom}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.harmeetsingh13.neo4jexample</groupId>
+			<artifactId>neo4j-spring-example-pojos</artifactId>
+			<version>${custom}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.harmeetsingh13.neo4jexample</groupId>
+			<artifactId>neo4j-spring-example-dao</artifactId>
+			<version>${custom}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.harmeetsingh13.neo4jexample</groupId>
+					<artifactId>neo4j-spring-example-common</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.harmeetsingh13.neo4jexample</groupId>
+					<artifactId>neo4j-spring-example-pojos</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
