create controller for save person object

--- a/neo4j-spring-example-service/pom.xml
+++ b/neo4j-spring-example-service/pom.xml
@@ -50,6 +50,16 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<!-- Miscellaneous -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.trove4j</groupId>
+			<artifactId>trove4j</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
